fix(layout): changed section-title in Service components to service-section-title, to be more specific and not spill into other components

--- a/src/components/services/services.css
+++ b/src/components/services/services.css
@@ -8,7 +8,7 @@
   padding: var(--padding-vertical) var(--padding-horizontal);
 }
 
-.section-title {
+.service-section-title {
   margin-bottom: 3rem;
 }
 
